src/objects/Apttus__Document_Output_Format__c.object
<CustomObject>
    <description>Holds default output format preferences by user profile and agreement type for use in the agreement document generation process.</description>
    <fields>
        <fullName>Apttus__Agreement_Type_Id__c</fullName>
        <description>Associated agreement type</description>
        <label>Agreement Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__AllowOverrideWatermark__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the user is allowed to override the default watermark setting during the agreement document generation process.</description>
        <label>Allow Override (Watermark)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Allow_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the user is allowed to override the default output format during the agreement document generation process.</description>
        <label>Allow Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__IncludeWatermark__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether watermark will be added to the document</description>
        <label>Include Watermark</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Output_Format__c</fullName>
        <description>The document output format (either PDF, RTF or DOC or DOCX)</description>
        <label>Output Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DOCX</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Profile_Id__c</fullName>
        <description>The associated user profile</description>
        <label>Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Agreement Document Output Format</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Document Output Formats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>